@@ -1,3 +1,8 @@
+2007-04-11 Sarka Todorova <sarka.todorova@cern.ch>
+        * faster initialization (identify prototypes and recalculate) 
+	* persistent problem: unidentified RPC layers in BMS stations 
+        * tagged as MuonTrackingGeometry-00-00-40
+
 2007-04-10 Sarka Todorova <sarka.todorova@cern.ch>
         * fix crashes in dbg (from MuonIdHelpers when identifing MTG active surfaces)
 	* known problems, to be fixed : unidentified RPC layers in BMS stations
